// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPassword should render as default 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ResetPasswordScreen
    copy={
      Object {
        "ctaLabel": "",
        "heading": "",
      }
    }
    disableSubmit={false}
    email=""
    emailError=""
    isSubmitting={false}
    onCancelPress={[MockFunction]}
    onEmailChange={[MockFunction]}
    onSubmitPress={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Pad
          height={120}
        />,
        <Heading
          bold={true}
          label=""
          style={
            Object {
              "color": "rgb(51,51,51)",
            }
          }
        />,
        <Pad
          height={90}
        />,
        <TextInput
          errorMessage=""
          hasError={false}
          onChange={[MockFunction]}
          type="Email"
          value=""
        />,
        <Pad
          height={30}
        />,
        <Button
          disabled={false}
          isLoading={false}
          label="send me the link"
          onPress={[MockFunction]}
          type="Primary"
        />,
        <Pad
          height={10}
        />,
        <Button
          label=""
          onPress={[MockFunction]}
          type="Link"
        />,
      ],
      "footerImage": "forest",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 120,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "bold": true,
          "label": "",
          "style": Object {
            "color": "rgb(51,51,51)",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 90,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "errorMessage": "",
          "hasError": false,
          "onChange": [MockFunction],
          "type": "Email",
          "value": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 30,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "disabled": false,
          "isLoading": false,
          "label": "send me the link",
          "onPress": [MockFunction],
          "type": "Primary",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 10,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "label": "",
          "onPress": [MockFunction],
          "type": "Link",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Pad
            height={120}
          />,
          <Heading
            bold={true}
            label=""
            style={
              Object {
                "color": "rgb(51,51,51)",
              }
            }
          />,
          <Pad
            height={90}
          />,
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Email"
            value=""
          />,
          <Pad
            height={30}
          />,
          <Button
            disabled={false}
            isLoading={false}
            label="send me the link"
            onPress={[MockFunction]}
            type="Primary"
          />,
          <Pad
            height={10}
          />,
          <Button
            label=""
            onPress={[MockFunction]}
            type="Link"
          />,
        ],
        "footerImage": "forest",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 120,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "bold": true,
            "label": "",
            "style": Object {
              "color": "rgb(51,51,51)",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 90,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": "",
            "hasError": false,
            "onChange": [MockFunction],
            "type": "Email",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 30,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "disabled": false,
            "isLoading": false,
            "label": "send me the link",
            "onPress": [MockFunction],
            "type": "Primary",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 10,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "",
            "onPress": [MockFunction],
            "type": "Link",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ResetPassword should render as submit button is disabled 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ResetPasswordScreen
    copy={
      Object {
        "ctaLabel": "",
        "heading": "",
      }
    }
    disableSubmit={true}
    email=""
    emailError=""
    isSubmitting={false}
    onCancelPress={[MockFunction]}
    onEmailChange={[MockFunction]}
    onSubmitPress={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Pad
          height={120}
        />,
        <Heading
          bold={true}
          label=""
          style={
            Object {
              "color": "rgb(51,51,51)",
            }
          }
        />,
        <Pad
          height={90}
        />,
        <TextInput
          errorMessage=""
          hasError={false}
          onChange={[MockFunction]}
          type="Email"
          value=""
        />,
        <Pad
          height={30}
        />,
        <Button
          disabled={true}
          isLoading={false}
          label="send me the link"
          onPress={[MockFunction]}
          type="Primary"
        />,
        <Pad
          height={10}
        />,
        <Button
          label=""
          onPress={[MockFunction]}
          type="Link"
        />,
      ],
      "footerImage": "forest",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 120,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "bold": true,
          "label": "",
          "style": Object {
            "color": "rgb(51,51,51)",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 90,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "errorMessage": "",
          "hasError": false,
          "onChange": [MockFunction],
          "type": "Email",
          "value": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 30,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "disabled": true,
          "isLoading": false,
          "label": "send me the link",
          "onPress": [MockFunction],
          "type": "Primary",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 10,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "label": "",
          "onPress": [MockFunction],
          "type": "Link",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Pad
            height={120}
          />,
          <Heading
            bold={true}
            label=""
            style={
              Object {
                "color": "rgb(51,51,51)",
              }
            }
          />,
          <Pad
            height={90}
          />,
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Email"
            value=""
          />,
          <Pad
            height={30}
          />,
          <Button
            disabled={true}
            isLoading={false}
            label="send me the link"
            onPress={[MockFunction]}
            type="Primary"
          />,
          <Pad
            height={10}
          />,
          <Button
            label=""
            onPress={[MockFunction]}
            type="Link"
          />,
        ],
        "footerImage": "forest",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 120,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "bold": true,
            "label": "",
            "style": Object {
              "color": "rgb(51,51,51)",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 90,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": "",
            "hasError": false,
            "onChange": [MockFunction],
            "type": "Email",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 30,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "disabled": true,
            "isLoading": false,
            "label": "send me the link",
            "onPress": [MockFunction],
            "type": "Primary",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 10,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "",
            "onPress": [MockFunction],
            "type": "Link",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ResetPassword should render as submitting 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ResetPasswordScreen
    copy={
      Object {
        "ctaLabel": "",
        "heading": "",
      }
    }
    disableSubmit={false}
    email=""
    emailError=""
    isSubmitting={true}
    onCancelPress={[MockFunction]}
    onEmailChange={[MockFunction]}
    onSubmitPress={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Pad
          height={120}
        />,
        <Heading
          bold={true}
          label=""
          style={
            Object {
              "color": "rgb(51,51,51)",
            }
          }
        />,
        <Pad
          height={90}
        />,
        <TextInput
          errorMessage=""
          hasError={false}
          onChange={[MockFunction]}
          type="Email"
          value=""
        />,
        <Pad
          height={30}
        />,
        <Button
          disabled={true}
          isLoading={true}
          label="submitting ..."
          onPress={[MockFunction]}
          type="Primary"
        />,
        <Pad
          height={10}
        />,
        <Button
          label=""
          onPress={[MockFunction]}
          type="Link"
        />,
      ],
      "footerImage": "forest",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 120,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "bold": true,
          "label": "",
          "style": Object {
            "color": "rgb(51,51,51)",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 90,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "errorMessage": "",
          "hasError": false,
          "onChange": [MockFunction],
          "type": "Email",
          "value": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 30,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "disabled": true,
          "isLoading": true,
          "label": "submitting ...",
          "onPress": [MockFunction],
          "type": "Primary",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 10,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "label": "",
          "onPress": [MockFunction],
          "type": "Link",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Pad
            height={120}
          />,
          <Heading
            bold={true}
            label=""
            style={
              Object {
                "color": "rgb(51,51,51)",
              }
            }
          />,
          <Pad
            height={90}
          />,
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Email"
            value=""
          />,
          <Pad
            height={30}
          />,
          <Button
            disabled={true}
            isLoading={true}
            label="submitting ..."
            onPress={[MockFunction]}
            type="Primary"
          />,
          <Pad
            height={10}
          />,
          <Button
            label=""
            onPress={[MockFunction]}
            type="Link"
          />,
        ],
        "footerImage": "forest",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 120,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "bold": true,
            "label": "",
            "style": Object {
              "color": "rgb(51,51,51)",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 90,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": "",
            "hasError": false,
            "onChange": [MockFunction],
            "type": "Email",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 30,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "disabled": true,
            "isLoading": true,
            "label": "submitting ...",
            "onPress": [MockFunction],
            "type": "Primary",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 10,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "",
            "onPress": [MockFunction],
            "type": "Link",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
